// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="control-container control-container--select"
  onKeyPress={[Function]}
  role="presentation"
>
  <label
    className="control-label"
    htmlFor="select-1"
  >
    Pwout
  </label>
  <select>
    <option
      value="foo"
    >
      foo
    </option>
  </select>
</div>
`;

exports[`should render correctly with query 1`] = `
<div
  className="control-container control-container--select"
  onKeyPress={[Function]}
  role="presentation"
>
  <label
    className="control-label"
    htmlFor="select-2"
  >
    Pwout
  </label>
  <select>
    <option
      value="foo"
    >
      foo
    </option>
    <option
      value="foofoo"
    >
      foofoo
    </option>
    <option
      value="fou"
    >
      fou
    </option>
    <option
      value="fooooo"
    >
      fooooo
    </option>
  </select>
</div>
`;
